src/objects/Property_Description__c.object
<CustomObject>
    <fields>
        <fullName>c_brand_cd__c</fullName>
        <label>Brand code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_event_flag__c</fullName>
        <label>Event flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_hotel_flag__c</fullName>
        <label>Hotel flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_ppdb_auth_cd__c</fullName>
        <label>PPDB auth code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_desc__c</fullName>
        <label>Property description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_short__c</fullName>
        <label>Property short description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_property_type__c</fullName>
        <label>Property type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>Quality code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_status__c</fullName>
        <label>Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_tr_flag__c</fullName>
        <label>Tr flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_prop_open_dt__c</fullName>
        <label>Property open date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>i_end_dow__c</fullName>
        <label>End dow</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_prop_id__c</fullName>
        <label>Property Id</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_susp_warn_days__c</fullName>
        <label>Susp warn days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Property Description</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>c_hotel_flag__c</columns>
        <columns>c_ppdb_auth_cd__c</columns>
        <columns>c_prop_desc__c</columns>
        <columns>i_prop_id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Description</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>